# dotfiles

./: .gitattributes  .gitignore  .gitmodules  README.md  link.sh  setup.sh
1_dev/: before.sh  setup.sh
alacritty/: alacritty.yml  link.sh  setup.sh
awesome/: env.sh  link.sh  multi-monitor.txt  picom.conf  rc.lua  scratch.lua  setup.sh  theme.lua
clash/: env.sh  setup.sh
code/mobiuspy/: pyproject.toml
code/mobiuspy/.cache/41/: cache.db
code/mobiuspy/cmd/: dev_openai.py  dev_react.py
code/mobiuspy/mobius/: __init__.py
code/mobiuspy/mobius/tools/: duckduckgo.py  python.py  url_loader.py
dingtalk/: setup.sh
docker/: docker-compose.yaml  http-proxy.conf  link.sh  setup.sh
fonts/: fonts.conf  link.sh  setup.sh
git/: .gitignore_global  env.zsh  link.sh  setup.sh
gnome/: link.sh  org.gnome.shell.extensions.paperwm.keybindings.dump  restore-gnome-shell-settings-2023-02-15.sh  setup.sh
go/: .golangci.yml  after.sh  env.zsh  link.sh  setup.sh  setup_openapi_diff.sh
grub/: readme.txt
hyprland/: hyprland.conf  link.sh  setup.sh
kafka/: run.sh  setup.md
kde/: kwin-shortcuts.kksrc  plasma6.kksrc  setup.sh
kitty/: kitty.conf  kitty.conf.bak  link.sh
kube/: after.sh  env.sh  setup.sh
libinput/: 40-libinput.conf  libinput-gestures.conf  link.sh
light/: setup.sh
lightdm/: readme.txt  setup.sh  slick-greeter.conf
locale/: link.sh  locale.conf
lvim/: config.lua  link.sh
notes/: tcp.txt
notion/: notion.desktop  setup.sh
ntp/: readme.md
nvim/: env.zsh  init.lua  lazy-lock.json  link.sh  setup.sh
ollama/: setup.sh
openvpn/: setup.sh
(+322 files in other folders)
